[tool.poetry]
name = "addresser"
version = "0.1.0"
description = "parse string addresses into their components"
authors = ["Andrea Giacobino <no.andrea@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
pytest-cov = "^2.10.1"
Faker = "^4.17.1"

[tool.poetry.dev-dependencies]
flake8 = "^3.8.4"
pytest = "^6.1.2"
mypy = "^0.790"
pytest-cov = "^2.10.1"

[tool.poetry.scripts]
addresser = "addresser.main:main"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
